app/01-mongo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataend
  namespace: dh-examen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
        - name: hello
          image: mongo:6.0.3
---
kind: Service
apiVersion: v1
metadata:
  name: dataend
  namespace: dh-examen
spec:
  type: ClusterIP
  selector:
    app: hello-v1
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
