app/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dh-examen
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: examen.dh
      http:
        paths:
          - pathType: Prefix
            path: "/api/*"
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - pathType: Prefix
            path: "/*"
            backend:
              service:
                name: frontend
                port:
                  number: 8080
